--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "kostu"
+name = "kotsu"
 version = "0.0.1"
 authors = [  
   { name="taiki-ishigaki", email="taiki.ishigaki@ieee.org" },
@@ -20,4 +20,4 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/Taiki-Ishigaki/MathRobotics"
+Homepage = "https://github.com/Taiki-Ishigaki/Kotsu"
